# snark_for_pdqhash

./: Cargo.toml  Map-to-Elliptic Curve.pptx  README.md
benches/: pdq_benchmark.rs  regime_a_microbenchmark.rs
docs/: regime_a_microbenchmark_results.md
examples/: emma_snark.rs  pdqhash.py  snark_example.rs  snark_proof.rs
src/: dwn_pdq.rs  lib.rs  main.rs  regime_a.rs  snark.rs
