[package]
name = "pdqhash"
version = "0.1.1"
readme = "README.md"
keywords = ["pdq", "perceptual-hashing", "snark", "zero-knowledge"]
categories = ["cryptography", "algorithms"]
edition = "2021"

[features]
default = ["cli"]

# Enable command-line interface
cli = ["clap", "hex", "serde", "serde_json"]

# Enable SNARK functionality (adds significant compilation time and binary size)
snark = [
    "ark-bls12-381",
    "ark-ff",
    "ark-groth16",
    "ark-r1cs-std",
    "ark-relations",
    "ark-serialize",
    "ark-snark",
    "ark-std",
    "blake3",
    "rand",
]

[dependencies]
# Core dependencies
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp", "gif", "ico", "tiff", "webp"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# SNARK dependencies (optional, enabled with 'snark' feature)
ark-bls12-381 = { version = "0.4.0", features = ["curve"], optional = true }
ark-ff = { version = "0.4.0", optional = true }
ark-groth16 = { version = "0.4.0", optional = true }
ark-r1cs-std = { version = "0.4.0", optional = true }
ark-relations = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.0", features = ["derive"], optional = true }
ark-snark = { version = "0.4.0", optional = true }
ark-std = { version = "0.4.0", features = ["parallel"], optional = true }
blake3 = { version = "1.3", optional = true }
rand = { version = "0.8", features = ["std", "std_rng"], optional = true }

[dev-dependencies]
tempfile = "3.3"
walkdir = "2.3"
hex = "0.4"
criterion = "0.3"

[[bench]]
name = "pdq_benchmark"
harness = false

[[bench]]
name = "regime_a_microbenchmark"
harness = false
